# docling-saas

./: .gitignore  README.md  docling-serve  docling-service-blueprint.md  pyproject.toml
api/: __init__.py  dependencies.py  main.py
api/routes/: config.py  health.py  models.py  processing.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: header.tsx  sidebar.tsx
frontend/src/components/models/: disk-usage.tsx  model-table.tsx
frontend/src/components/processing/: file-upload-zone.tsx  process-button.tsx  processing-options.tsx
frontend/src/components/results/: chunks-table.tsx  json-viewer.tsx  markdown-viewer.tsx  result-skeleton.tsx  result-tabs.tsx  stats-panel.tsx  timing-breakdown.tsx
frontend/src/components/ui/: accordion.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  slider.tsx  tabs.tsx
frontend/src/hooks/: use-config.ts  use-models.ts  use-processing.ts
frontend/src/lib/: api.ts  types.ts  utils.ts
frontend/src/pages/: about-page.tsx  models-page.tsx  processing-page.tsx
frontend/src/providers/: query-provider.tsx
src/: __init__.py  app.py  chunker.py  cli.py  config.py  model_manager.py  models.py  processor.py
src/components/: __init__.py  input_panel.py  model_panel.py  parameter_panel.py  result_display.py
