[project]
name = "docling-playground"
version = "0.1.0"
description = "Interactive Docling document processing playground"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.0",
    "docling>=2.70",
    "transformers>=4.40",
    "pydantic>=2.0",
    "langdetect>=1.0.9",
    "click>=8.0",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
ocr = [
    "rapidocr-onnxruntime>=1.3",
    "easyocr>=1.7",
]
tesseract = ["tesserocr>=2.6"]
gpu = ["torch>=2.0"]
vlm = ["docling[vlm]"]
all = ["docling-playground[ocr,tesseract,gpu,vlm]"]

[project.scripts]
docling-playground = "src.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "api"]
